[package]
name = "todo-test-apps"
version = "0.1.0"
edition = "2021"
default-run = "dioxus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "dioxus"
path = "src/dioxus/main.rs"

[[bin]]
name = "bevy"
path = "src/bevy/main.rs"

[[bin]]
name = "makepad"
path = "src/makepad/main.rs"
